Adding delete of a ticket

--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -758,6 +758,10 @@ _expediente_teacher_save_student_qualification:
     pattern:  /t/student/qualification/save
     defaults: { _controller: TecnotekExpedienteBundle:Teacher:saveStudentQualification }
 
+_expediente_sysadmin_remove_ticket:
+    pattern:  /ticket/delete
+    defaults: { _controller: TecnotekExpedienteBundle:Student:removeTicket}
+
 _expediente_sysadmin_student_show_ticket:
     pattern: /ticket/show/[id]
     defaults: { _controller: TecnotekExpedienteBundle:Student:ticketShow }
