--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -472,6 +472,10 @@ _expediente_remove_relative:
     pattern:  /students/removeRelative
     defaults: { _controller: TecnotekExpedienteBundle:Student:removeRelative}
 
+_expediente_sysadmin_get_relative_info:
+    pattern:  /students/getRelativeInfo
+    defaults: { _controller: TecnotekExpedienteBundle:Student:getRelativeInfo}
+
 _expediente_get_contacts_list:
     pattern:  /students/contact/list
     defaults: { _controller: TecnotekExpedienteBundle:Student:getContactList }
@@ -522,6 +526,14 @@ _expediente_report_students:
 _expediente_report_clubs:
    pattern:  /reports/clubs/
    defaults: { _controller: TecnotekExpedienteBundle:Report:reportClubs }
+
+_expediente_report_period_notes_by_group:
+   pattern:  /reports/qualificationsOfPeriod/
+   defaults: { _controller: TecnotekExpedienteBundle:Report:qualificationsOfPeriod }
+
+_expediente_report_group_qualifications:
+   pattern:  /reports/groupQualifications/
+   defaults: { _controller: TecnotekExpedienteBundle:Report:loadGroupQualifications }
 
 #########################################
 
