--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -854,6 +854,10 @@ _expediente_teacher_load_groups_of_period:
   pattern: /t/loadGroupsOfPeriod/
   defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadGroupsOfPeriod }
 
+_expediente_teacher_load_entries_of_course:
+  pattern: /t/loadEntriesOfCourse/
+  defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadEntriesOfCourse }
+
 _expediente_teacher_load_courses_of_group_by_teacher:
   pattern: /t/loadCourseOfGroupByTeacher/
   defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadCourseOfGroupByTeacher }
