--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -535,6 +535,10 @@ _expediente_report_students_routes:
     pattern:  /reports/studentsRoutes/
     defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentRoutes }
 
+_expediente_report_course_by_group:
+    pattern:  /reports/groupByCourse/
+    defaults: { _controller: TecnotekExpedienteBundle:Report:groupByCourse }
+
 _expediente_report_absences_by_route:
    pattern:  /reports/absencesByRoute/
    defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentAbsencesByRoute }
@@ -562,6 +566,10 @@ _expediente_report_best_averages_by_group:
 _expediente_report_group_qualifications:
    pattern:  /reports/groupQualifications/
    defaults: { _controller: TecnotekExpedienteBundle:Report:loadGroupQualifications }
+
+_expediente_report_group_qualifications_by_course:
+   pattern:  /reports/groupQualificationsByCourse/
+   defaults: { _controller: TecnotekExpedienteBundle:Report:loadGroupQualificationsByCourse }
 
 _expediente_report_group_qualifications_by_rubro:
    pattern:  /reports/groupQualificationsByRubro/
@@ -752,6 +760,14 @@ _expediente_sysadmin_qualifications:
 _expediente_sysadmin_load_groups_of_period_q:
   pattern: /qualifications/loadGroupsOfPeriod/
   defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:loadGroupsOfPeriod }
+
+_expediente_sysadmin_load_groups_of_year:
+  pattern: /qualifications/loadGroupsOfYear/
+  defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:loadGroupsOfYear }
+
+_expediente_sysadmin_load_courses_of_group:
+  pattern: /qualifications/loadCoursesOfGroup/
+  defaults: { _controller: TecnotekExpedienteBundle:SuperAdmin:loadCoursesOfGroup }
 
 _expediente_sysadmin_load_courses_of_group_by_teacher:
   pattern: /qualifications/loadCourseOfGroupByTeacher/
