--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -6,8 +6,8 @@
     database_host     = localhost
     database_port     =
     database_name     = symfony
-    database_user     = root
-    database_password = root
+    database_user     = stmcr563
+    database_password = soporte5506
     mailer_transport  = smtp
     mailer_host       = localhost
     mailer_user       =
