--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -195,6 +195,10 @@ _expediente_sysadmin_student:
     pattern:  /student
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentList }
 
+_expediente_sysadmin_student_search:
+    pattern:  /student/search
+    defaults: { _controller: TecnotekExpedienteBundle:Student:searchStudents }
+
 _expediente_sysadmin_student_psico_esc:
     pattern:  /studentPsico
     defaults: { _controller: TecnotekExpedienteBundle:Student:studentListPsicoEsc }
@@ -998,6 +1002,10 @@ _expediente_teacher_load_group_qualifications:
   pattern:  /t/loadGroupQualifications
   defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadGroupQualifications }
 
+_expediente_teacher_generate_group_excel:
+  pattern:  /t/generateGroupExcel
+  defaults: { _controller: TecnotekExpedienteBundle:Teacher:generateGroupExcel }
+
 _expediente_teacher_load_group_observations:
   pattern:  /t/loadGroupObservations
   defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadGroupObservations }
@@ -1134,6 +1142,10 @@ _expediente_emails:
 _expediente_emails_load:
     pattern:  /std/emails/load
     defaults: { _controller: TecnotekExpedienteBundle:Student:emailsLoad }
+
+_expediente_emails_send:
+    pattern:  /std/emails/send
+    defaults: { _controller: TecnotekExpedienteBundle:Student:sendEmails }
 
 _expediente_sysadmin_load_period_levels:
     pattern:  /levels/load
