Initial version of excel generation for grades qualifications

--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -1006,6 +1006,10 @@ _expediente_teacher_generate_group_excel:
   pattern:  /t/generateGroupExcel
   defaults: { _controller: TecnotekExpedienteBundle:ExcelFileGenerator:generateGroupExcel }
 
+_expediente_teacher_load_group_excel:
+  pattern:  /t/loadGroupExcel
+  defaults: { _controller: TecnotekExpedienteBundle:ExcelFileGenerator:loadGroupExcel }
+
 _expediente_teacher_load_group_observations:
   pattern:  /t/loadGroupObservations
   defaults: { _controller: TecnotekExpedienteBundle:Teacher:loadGroupObservations }
