--- a/app/config/parameters.example.yml
+++ b/app/config/parameters.example.yml
@@ -7,7 +7,7 @@ parameters:
     database_driver: pdo_mysql
     database_host: localhost
     database_port: '3306'
-    database_name: stmcr563_expediente
+    database_name: expediente2
     database_user: root
     database_password: root
     mailer_transport: smtp
