--- a/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
+++ b/src/Tecnotek/ExpedienteBundle/Resources/config/routing.yml
@@ -591,6 +591,10 @@ _expediente_report_students_by_route:
     pattern:  /reports/studentsByRoute/
     defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentByRoute }
 
+_expediente_report_students_route_by_group:
+    pattern:  /reports/studentsInRouteByGroup/
+    defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentInRouteByGroup }
+
 _expediente_report_students_by_route_club:
     pattern:  /reports/studentsByRouteClub/
     defaults: { _controller: TecnotekExpedienteBundle:Report:reportStudentByRouteClub }
@@ -655,8 +659,8 @@ _expediente_report_best_averages_by_group:
    pattern:  /reports/averagesOfPeriod/
    defaults: { _controller: TecnotekExpedienteBundle:Report:averagesOfPeriod }
 
-_expediente_report_best_averages_by_group:
-   pattern:  /reports/averagesOfPeriod/
+_expediente_report_best_averages_by_group_detail:
+   pattern:  /reports/averagesOfPeriod/load
    defaults: { _controller: TecnotekExpedienteBundle:Report:averagesOfGroup }
 
 _expediente_report_group_qualifications:
